djvusmooth (0.2.7) UNRELEASED; urgency=low

  * Add keyboard shortcut Ctrl+G for “Go to page…”.
    Thanks to Kyrill Detinov for the bug report and the patch.

 -- Jakub Wilk <jwilk@jwilk.net>  Mon, 14 Jun 2010 17:31:31 +0200

djvusmooth (0.2.5) unstable; urgency=low

  * Fix setup.py to install all the required packages.
    Thanks to Kyrill Detinov for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 08 Apr 2010 18:06:50 +0200

djvusmooth (0.2.4) unstable; urgency=low

  * Fix regression in handling sidebar events with wxWidgets 2.8. Thanks to
    Janusz S. Bień for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 31 Mar 2010 12:53:04 +0200

djvusmooth (0.2.3) unstable; urgency=low

  * Fix issues with “Overprinted annotation properties” dialog:
    + Allow to turn off the “allow visible” property.
      Thanks to Janusz S. Bień for the bug report.
      http://bugs.debian.org/574362
    + Disable the “allow visible” checkbox if a hyperlink has no border.
      http://bugs.debian.org/574338
    + Display real border width instead of hard-coded 1.
    + Use the term “width” rather than “thickness” consistently.
  * Document that using shadow border thinner than 3 pixels is not portable.
    http://bugs.debian.org/574361

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 17 Mar 2010 21:59:58 +0100

djvusmooth (0.2.2) unstable; urgency=low

  * Fix crashes in the ‘Saving document’ and ‘Go to page’ dialogs.
  * Fix compatibility with wxWidgets 2.8.
  * Give a more helpful error messages if djvused is not available.

 -- Jakub Wilk <jwilk@jwilk.net>  Fri, 22 Jan 2010 19:36:03 +0100

djvusmooth (0.2.1) unstable; urgency=low

  * Don't crash on non-ASCII file names.
    Thanks to Jean-Christophe Heger for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Mon, 11 Jan 2010 18:27:28 +0100

djvusmooth (0.2.0) unstable; urgency=low

  * Remember last visited directory.
    Thanks to Mateusz Turcza for providing a patch.
  * Follow the XDG Base Directory Specification.