@@ -2,6 +2,8 @@ djvusmooth (0.2.7) UNRELEASED; urgency=low
 
   * Add keyboard shortcut Ctrl+G for “Go to page…”.
     Thanks to Kyrill Detinov for the bug report and the patch.
+  * Reopen document after save, so that it's possible to display non-cached
+    pages. Thanks to Kyrill Detinov for the bug report.
 
  -- Jakub Wilk <jwilk@jwilk.net>  Mon, 14 Jun 2010 17:31:31 +0200
 
